Demos/MSVCPP/Shared_MSVCPP/Sepia2_Lib.h




  // ---  Prima  PRI functions  ------------------------------------------
  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetDeviceInfo             (int iDevIdx,     int   iSlotId,  char* pcDeviceID,       char* pcDeviceType,  char*  pcFW_Version,   int*  piWL_Count);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_DecodeOperationMode       (int iDevIdx,     int   iSlotId,  int    iOperModeIdx,    char* pcOperMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetOperationMode          (int iDevIdx,     int   iSlotId,  int*  piOperModeIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetOperationMode          (int iDevIdx,     int   iSlotId,  int    iOperModeIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_DecodeTriggerSource       (int iDevIdx,     int   iSlotId,  int    iTrgSrcIdx,      char* pcTrgSrc,      unsigned char* pbFrequencyEnabled, unsigned char* pbTrigLevelEnabled);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetTriggerSource          (int iDevIdx,     int   iSlotId,  int*  piTrgSrcIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetTriggerSource          (int iDevIdx,     int   iSlotId,  int    iTrgSrcIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetTriggerLevelLimits     (int iDevIdx,     int   iSlotId,  int*  piTrg_MinLvl,     int*  piTrg_MaxLvl,  int*   piTrg_LvlRes);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetTriggerLevel           (int iDevIdx,     int   iSlotId,  int*  piTrgLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetTriggerLevel           (int iDevIdx,     int   iSlotId,  int    iTrgLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetFrequencyLimits        (int iDevIdx,     int   iSlotId,  int*  piMinFreq,        int*  piMaxFreq);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetFrequency              (int iDevIdx,     int   iSlotId,  int*  piFrequency);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetFrequency              (int iDevIdx,     int   iSlotId,  int    iFrequency);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetGatingLimits           (int iDevIdx,     int   iSlotId,  int*  piMinOnTime,      int*  piMaxOnTime,   int*  pbMinOffTimefactor,  int*  pbMaxOffTimefactor);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetGatingData             (int iDevIdx,     int   iSlotId,  int*  piOnTime,         int*  piOffTimefact);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetGatingData             (int iDevIdx,     int   iSlotId,  int    iOnTime,         int    iOffTimefact);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetGatingEnabled          (int iDevIdx,     int   iSlotId,  unsigned char* pbGatingEnabled);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetGatingEnabled          (int iDevIdx,     int   iSlotId,  unsigned char   bGatingEnabled);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetGateHighImpedance      (int iDevIdx,     int   iSlotId,  unsigned char* pbHighImpedance);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetGateHighImpedance      (int iDevIdx,     int   iSlotId,  unsigned char   bHighImpedance);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_DecodeWavelength          (int iDevIdx,     int   iSlotId,  int    iWLIdx,          int*  piWL);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetWavelengthIdx          (int iDevIdx,     int   iSlotId,  int*  piWLIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetWavelengthIdx          (int iDevIdx,     int   iSlotId,  int    iWLIdx);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_GetIntensity              (int iDevIdx,     int   iSlotId,  int    iWLIdx,          word* pwIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_PRI_SetIntensity              (int iDevIdx,     int   iSlotId,  int    iWLIdx,          word   wIntensity);