Demos/MSVCSharp/Shared_MSVCSharp/Sepia2_Lib.cs


    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetDeviceInfo(int iDevIdx, int iSlotId, StringBuilder pcDeviceID, StringBuilder pcDeviceType, StringBuilder pcFW_Version, out int piWL_Count);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_DecodeOperationMode(int iDevIdx, int iSlotId, int iOperModeIdx, StringBuilder pcOperMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetOperationMode(int iDevIdx, int iSlotId, out int piOperModeIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetOperationMode(int iDevIdx, int iSlotId, int iOperModeIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_DecodeTriggerSource(int iDevIdx, int iSlotId, int iTrgSrcIdx, StringBuilder pcTrgSrc, out byte pbFrequencyEnabled, out byte pbTrigLevelEnabled);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetTriggerSource(int iDevIdx, int iSlotId, out int piTrgSrcIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetTriggerSource(int iDevIdx, int iSlotId, int iTrgSrcIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetTriggerLevelLimits(int iDevIdx, int iSlotId, out int piTrg_MinLvl, out int piTrg_MaxLvl, out int piTrg_LvlRes);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetTriggerLevel(int iDevIdx, int iSlotId, out int piTrgLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetTriggerLevel(int iDevIdx, int iSlotId, int iTrgLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetFrequencyLimits(int iDevIdx, int iSlotId, out int piMinFreq, out int piMaxFreq);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetFrequency(int iDevIdx, int iSlotId, out int piFrequency);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetFrequency(int iDevIdx, int iSlotId, int iFrequency);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetGatingLimits(int iDevIdx, int iSlotId, out int piMinOnTime, out int piMaxOnTime, out int pbMinOffTimefactor, out int pbMaxOffTimefactor);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetGatingData(int iDevIdx, int iSlotId, out int piOnTime, out int piOffTimefact);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetGatingData(int iDevIdx, int iSlotId, int iOnTime, int iOffTimefact);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetGatingEnabled(int iDevIdx, int iSlotId, out byte pbGatingEnabled);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetGatingEnabled(int iDevIdx, int iSlotId, byte bGatingEnabled);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetGateHighImpedance(int iDevIdx, int iSlotId, out byte pbHighImpedance);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetGateHighImpedance(int iDevIdx, int iSlotId, byte bHighImpedance);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_DecodeWavelength(int iDevIdx, int iSlotId, int iWLIdx, out int piWL);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetWavelengthIdx(int iDevIdx, int iSlotId, out int piWLIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetWavelengthIdx(int iDevIdx, int iSlotId, int iWLIdx);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_GetIntensity(int iDevIdx, int iSlotId, int iWLIdx, out ushort pwIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_PRI_SetIntensity(int iDevIdx, int iSlotId, int iWLIdx, ushort wIntensity);

    #endregion Part is from 'SEPIA2_Lib.h'

  }
}
